Minor typo in element_conversion.yaml

--- a/docstrings/astro/element_conversion.yaml
+++ b/docstrings/astro/element_conversion.yaml
@@ -28,7 +28,7 @@ notes: |
   | ``5`` | True anomaly                                                                         |
   +-------+--------------------------------------------------------------------------------------+
 
-  Unless specified otherwise, the sphreical elements are ordered as:
+  Unless specified otherwise, the spherical elements are ordered as:
 
   +-------+--------------------------------------------------------------------------------------+
   | Index | Spherical State Element                                                              |
