--- a/docstrings/astro/element_conversion.yaml
+++ b/docstrings/astro/element_conversion.yaml
@@ -174,7 +174,7 @@ functions:
     short_summary: "Convert mean to true anomaly."
     extended_summary: |
       Convert the mean anomaly of the orbit to its true anomaly. This conversion first converts mean to eccentric anomaly
-      (hyperbolic eccentric anomaly, if eccentriciy is larger than 1, elliptical eccentric anomaly if it is smaller than 1), and subsequently to true anomaly.
+      (hyperbolic eccentric anomaly, if eccentricity is larger than 1, elliptical eccentric anomaly if it is smaller than 1), and subsequently to true anomaly.
 
     parameters:
       - name: eccentricity # [py]
@@ -206,7 +206,7 @@ functions:
     short_summary: "Convert true to mean anomaly."
     extended_summary: |
       Convert the true anomaly of the orbit to its mean anomaly. This conversion first converts true to eccentric anomaly
-      (hyperbolic eccentric anomaly, if eccentriciy is larger than 1, elliptical eccentric anomaly if it is smaller than 1),
+      (hyperbolic eccentric anomaly, if eccentricity is larger than 1, elliptical eccentric anomaly if it is smaller than 1),
       and subsequently to mean anomaly.
 
     parameters:
@@ -237,20 +237,20 @@ functions:
 
     returns:
         type: float # [py]
-        description: Hyperbolic eccentric anomaly, if eccentriciy is larger than 1, elliptical eccentric anomaly if it is smaller than 1
+        description: Hyperbolic eccentric anomaly, if eccentricity is larger than 1, elliptical eccentric anomaly if it is smaller than 1
 
 
   - name: eccentric_to_true_anomaly # [py]
     short_summary: "Convert eccentric to true anomaly."
 
     parameters:
+      - name: eccentric_anomaly # [py]
+        type: float # [py]
+        description: Hyperbolic eccentric anomaly, if eccentricity is larger than 1, elliptical eccentric anomaly if it is smaller than 1
+
       - name: eccentricity # [py]
         type: float # [py]
         description: Value of the orbital eccentricity
-
-      - name: eccentric_anomaly # [py]
-        type: float # [py]
-        description: Hyperbolic eccentric anomaly, if eccentriciy is larger than 1, elliptical eccentric anomaly if it is smaller than 1
 
     returns:
         type: float # [py]
@@ -266,7 +266,7 @@ functions:
 
       - name: eccentric_anomaly # [py]
         type: float # [py]
-        description: Hyperbolic eccentric anomaly, if eccentriciy is larger than 1, elliptical eccentric anomaly if it is smaller than 1
+        description: Hyperbolic eccentric anomaly, if eccentricity is larger than 1, elliptical eccentric anomaly if it is smaller than 1
 
     returns:
         type: float # [py]
