Replace dead link with working version

--- a/docstrings/astro/element_conversion.yaml
+++ b/docstrings/astro/element_conversion.yaml
@@ -538,7 +538,7 @@ functions:
     extended_summary: |
       Function to convert an array of four quaternion elements to the equivalent rotation matrix. These quaternion elements
       are for instance used when propagating rotational dynamics in Tudat, and this function can be used to convert the
-      numerical results to a usable rotation matrix. See `our user guide <https://tudat-space.readthedocs.io/en/stable/_src_user_guide/state_propagation/environment_setup/use_of_reference_frames.html#rotational-states>`_ for more details.
+      numerical results to a usable rotation matrix. See `our user guide <https://docs.tudat.space/en/latest/_src_user_guide/state_propagation/environment_setup/frames_in_environment.html?highlight=rotational%20states#rotational-states>`_ for more details.
 
     parameters:
       - name: quaternion_entries # [py]
