--- a/docstrings/astro/element_conversion.yaml
+++ b/docstrings/astro/element_conversion.yaml
@@ -260,17 +260,17 @@ functions:
     short_summary: "Convert eccentric to mean anomaly."
 
     parameters:
-      - name: eccentricity # [py]
-        type: float # [py]
-        description: Value of the orbital eccentricity
-
       - name: eccentric_anomaly # [py]
         type: float # [py]
         description: Hyperbolic eccentric anomaly, if eccentricity is larger than 1, elliptical eccentric anomaly if it is smaller than 1
 
+      - name: eccentricity # [py]
+        type: float # [py]
+        description: Value of the orbital eccentricity
+
     returns:
         type: float # [py]
-        description: Mean of the true anomaly
+        description: Value of the mean anomaly
 
   - name: mean_to_eccentric_anomaly # [py]
     short_summary: "Convert mean to eccentric anomaly."
@@ -392,7 +392,7 @@ functions:
 
       - name: singularity_at_zero_inclination # [py]
         type: bool # [py]
-        description: Singularity at 0 degrees inclination if false, 180 degrees if true
+        description: Singularity at 0 degrees inclination if ``True``, 180 degrees if ``False``
 
     returns:
         type: numpy.ndarray # [py]
