--- a/docstrings/numerical_simulation/environment_setup/gravity_field_variation.yaml
+++ b/docstrings/numerical_simulation/environment_setup/gravity_field_variation.yaml
@@ -70,8 +70,9 @@ functions:
 
       .. code-block:: python # [py]
          # [py]
-         tide_raising_body = "Moon"
+         tide_raising_body = "Moon" # [py]
          degree = 2 # [py]
+         love_number = 0.301 # [py]
          gravity_field_variation_list = list() # [py]
          gravity_field_variation_list.append( environment_setup.gravity_field_variation.solid_body_tide( # [py]
          	tide_raising_body, love_number, degree ) # [py]
